- fix white space around datetime buttons;

--- a/core/src/components/datetime/datetime.ionic.scss
+++ b/core/src/components/datetime/datetime.ionic.scss
@@ -219,9 +219,9 @@
 :host .datetime-footer {
   @include globals.padding(
     globals.$ion-space-200,
-    globals.$ion-space-0,
+    globals.$ion-space-400,
     globals.$ion-space-200,
-    globals.$ion-space-0
+    globals.$ion-space-400
   );
   margin-top: globals.$ion-space-200;
 
